--- a/res/xml/dark_mode_settings.xml
+++ b/res/xml/dark_mode_settings.xml
@@ -61,6 +61,11 @@
         android:summary="@string/berry_black_theme_summary"
         android:defaultValue="false" />
 
+    <ListPreference
+        android:key="android.theme.customization.custom_overlays"
+        android:title="@string/theme_customization_systemui_title"
+        settings:keywords="@string/keywords_dark_ui_mode"/>
+
     <com.android.settingslib.widget.FooterPreference
             android:key="dark_ui_footer"
             android:title="@string/dark_ui_text"
