--- a/res/layout/battery_header.xml
+++ b/res/layout/battery_header.xml
@@ -19,46 +19,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/battery_entity_header"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical"
     style="@style/BatteryEntityHeader">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="12dp"
-        android:background="@drawable/battery_metter_gauage"
-        android:padding="4dp">
-
 		<com.android.settings.fuelgauge.BatteryMeterView
 			android:id="@+id/battery_header_icon"
-			android:layout_width="@dimen/battery_meter_width"
-			android:layout_height="@dimen/battery_meter_height"
-			android:layout_margin="8dp"
-			app:cardElevation="5dp" />
+			android:layout_width="match_parent"
+			android:layout_height="240dp"
+			android:layout_gravity="bottom"/>
 
-	</FrameLayout>
-
-	<TextView
+        <TextView
         android:id="@+id/battery_percent"
-		android:layout_width="match_parent"
+		    android:layout_width="match_parent"
         android:layout_height="wrap_content"
-		android:layout_marginTop="12dp"
-		android:textAppearance="@style/TextAppearance.EntityHeaderTitle"
-		android:visibility="gone"
-		android:textSize="36sp" />
+	      android:visibility="gone"
+        android:textSize="36sp" />
 
-    <TextView
+        <TextView
         android:id="@+id/summary1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:textAlignment="center"
-        android:textSize="20sp"
-		android:minLines="1"
+        android:textSize="28sp"
+        android:maxLines="3"
+        android:visibility="gone"
         android:textColor="?android:attr/textColorPrimary"/>
 
 </LinearLayout>
