--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -169,4 +169,10 @@
     <color name="palette_list_dark_mode_color_blue">#8AB4F8</color> <!-- Material Blue 300 -->
     <color name="palette_list_dark_mode_color_purple">#c58af9</color> <!-- Material Purple 300 -->
 
+    <!-- Custom preference cardView -->
+    <color name="colorAccentSettings">@*android:color/accent_device_default_light</color>
+    <color name="card_view_bg">#1B1B1B</color>
+    <color name="black">#FAFAFA</color>
+    <color name="off_black">#90FAFAFA</color>
+
 </resources>
