--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -430,4 +430,11 @@
 
     <!-- Text padding for EmptyTextSettings -->
     <dimen name="empty_text_padding">24dp</dimen>
+
+    <!-- Custom preference cardView -->
+    <dimen name="card_view_start_padding">20dp</dimen>
+    <dimen name="card_view_end_padding">20dp</dimen>
+    <dimen name="card_view_start_margin">15dp</dimen>
+    <dimen name="card_view_end_margin">15dp</dimen>
+    <dimen name="card_height_settings">75dp</dimen>
 </resources>
