Add Our logo animation to firmware window * Thanx to @Tdotk for making such a great animation
Signed-off-by: Anush02198 <Anush.4376@gmail.com>

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -23,8 +23,8 @@
 
     <!-- SpiceOS logo -->
     <PreferenceScreen
-        android:layout="@layout/spiceos_logo"
-        android:key="spiceos_logo"
+        android:key="spiceos_lottie_animation"
+        android:layout="@layout/spiceos_lottie_animation"
         android:selectable="false" />
 
     <!-- Android version -->
