settings : Redesign spiceos  settings
Signed-off-by: G-H-O-5-T <jijinraj401@gmail.com>
Change-Id: I500ee180d3402d2a75e473c955d65bc3eaf9a3e6
Signed-off-by: Anush02198 <Anush.4376@gmail.com>

--- a/spiceos_res/layout/preference_cardview.xml
+++ b/spiceos_res/layout/preference_cardview.xml
@@ -13,11 +13,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/prefCard"
     android:layout_width="match_parent"
-    android:layout_height="74dp"
+    android:layout_height="90dp"
     android:clickable="true"
     android:focusable="true"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
@@ -26,47 +26,35 @@
     android:layout_marginBottom="@dimen/card_margin_bottom"
     android:layout_marginRight="@dimen/card_margin_right"
     android:layout_marginLeft="@dimen/card_margin_left"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:strokeWidth="@dimen/card_stroke"
+    card_view:strokeColor="?android:attr/colorAccent">
 
-    <LinearLayout
+     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:minHeight="90dp"
+        android:padding="0dp">
 
-        <LinearLayout
-            android:id="@id/icon_frame"
-            android:layout_width="74dp"
-            android:layout_height="74dp">
+        <TextView
+            android:id="@android:id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:textColor="?android:attr/colorAccent"
+            android:layout_centerVertical="true"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
 
-            <ImageView
-                android:id="@android:id/icon"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="center" />
+        <ImageView
+            android:maxHeight="90dp"
+            android:src="@drawable/ic_cardview_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:layout_centerVertical="true"/>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@android:id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:id="@android:id/summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="2dp"
-                android:textSize="12sp" />
-        </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </RelativeLayout>
+</com.google.android.material.card.MaterialCardView>
