--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -171,7 +171,7 @@
 
     <!-- Custom preference cardView -->
     <color name="colorAccentSettings">@*android:color/accent_device_default_light</color>
-    <color name="card_view_bg">#1B1B1B</color>
+    <color name="card_view_bg">#CC1B1B1B</color>
     <color name="black">#FAFAFA</color>
     <color name="off_black">#90FAFAFA</color>
 
