Settings: Remove unrequired dividers in some sections
These just look weird

Signed-off-by: Anush02198 <Anush.4376@gmail.com>

--- a/res/xml/auto_brightness_detail.xml
+++ b/res/xml/auto_brightness_detail.xml
@@ -36,7 +36,7 @@
         settings:controller="com.android.settings.display.AutoBrightnessDetailPreferenceController"
         settings:useAdminDisabledSummary="true"
         settings:userRestriction="no_config_brightness"
-        settings:allowDividerAbove="true" />
+        settings:allowDividerAbove="false" />
 
     <com.android.settingslib.widget.FooterPreference
         android:key="auto_brightness_footer"
