--- a/res/xml/configure_notification_settings.xml
+++ b/res/xml/configure_notification_settings.xml
@@ -30,7 +30,7 @@
         android:key="notification_history"
         android:title="@string/notification_history"
         android:summary="@string/notification_history_summary"
-        settings:allowDividerAbove="true"
+        settings:allowDividerAbove="false"
         settings:allowDividerBelow="false"
         android:order="2">
         <intent
