Settings:Improve Card Layout a bit
Signed-off-by: Anush02198 <Anush.4376@gmail.com>
Change-Id: Id7f8c45a602795c2069f5fcc2f7b8ddc63f09466

--- a/res/layout/card_view_pref_bottom.xml
+++ b/res/layout/card_view_pref_bottom.xml
@@ -36,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:textSize="12sp"
             android:textColor="@color/off_black"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
